<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:divider="@drawable/divider_vertical_16dp"
    android:showDividers="middle"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".view.Login.fragment.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:hint="Email"
        android:background="@drawable/bg_login_tf"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_login_tf"
            android:padding="16dp"
            android:hint="Password"
            />
        <ImageView
            android:id="@+id/showPassword"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignTop="@+id/edtPassword"
            android:layout_alignBottom="@+id/edtPassword"
            android:layout_alignEnd="@+id/edtPassword"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="8dp"
            android:alpha="0.5"
            android:src="@drawable/eye_crossed"
            />
    </RelativeLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textColor="@color/white"
        android:fontFamily="@font/kanit"
        android:background="@drawable/bg_btn_login"
        />

</LinearLayout>